force-app/main/default/objects/ServiceContract/fields/OracleContractId__c.field-meta.xml
<CustomField>
    <fullName>OracleContractId__c</fullName>
    <externalId>true</externalId>
    <label>OracleContractId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>