force-app/main/default/objects/ServiceContract/fields/POSCY__c.field-meta.xml
<CustomField>
    <fullName>POSCY__c</fullName>
    <formula>Account.POS_CY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POSCY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>