force-app/main/default/objects/ServiceContract/fields/posname__c.field-meta.xml
<CustomField>
    <fullName>posname__c</fullName>
    <formula>Account.POS_Revenue__r.POS_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>posname</label>
    <type>Text</type>
</CustomField>