force-app/main/default/objects/ServiceContract/fields/POSPY__c.field-meta.xml
<CustomField>
    <fullName>POSPY__c</fullName>
    <formula>Account.POS_PY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POSPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>