force-app/main/default/objects/ServiceContract/fields/PrimaryReseller__c.field-meta.xml
<CustomField>
    <fullName>PrimaryReseller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PrimaryReseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Associated Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>