force-app/main/default/objects/ServiceContract/fields/Reseller_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>