force-app/main/default/objects/ServiceContract/fields/Sales_Rep_Notes_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Notes_for_Approval__c</fullName>
    <label>Sales Rep Notes for Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>