force-app/main/default/objects/ServiceContract/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
            </value>
            <value>
                <fullName>VIP Gold</fullName>
            </value>
            <value>
                <fullName>Hotline Only</fullName>
            </value>
            <value>
                <fullName>VIP Platinum</fullName>
                <isActive>false</isActive>
                <label>VIP Platinum</label>
            </value>
            <value>
                <fullName>VIP Standard</fullName>
                <isActive>false</isActive>
                <label>VIP Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>