force-app/main/default/objects/ServiceContract/validationRules/ServiceTypeSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceTypeSelected</fullName>
    <active>true</active>
    <description>Ensure that the selection for service type is not blank and is not none</description>
    <errorConditionFormula>isblank(text(Service_Type__c )) ||
text(Service_Type__c ) == &apos;-None-&apos;</errorConditionFormula>
    <errorMessage>Please select a Service Program Type</errorMessage>
</ValidationRule>